# food-calculator

./: .eslintrc.js  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.html  tsconfig.json  turbo.json  vitest.config.ts
.cursor/rules/: create-prd.mdc  process-task-list.mdc
apps/docs/: .eslintrc.js  next.config.js  package.json  tsconfig.json
apps/docs/app/: page.tsx
apps/mobile/nice-apple/: README-Profile.md  app.json  package-lock.json  package.json  tailwind.config.js
apps/mobile/nice-apple/app/: _layout.tsx
apps/mobile/nice-apple/types/: profile.ts
apps/mobile/nice-apple/utils/: profileManager.ts
apps/sst/: .gitignore  package.json  pyproject.toml  sst.config.ts  sst.pyi
apps/sst/functions/: pyproject.toml
apps/sst/functions/src/functions/: __init__.py  lambda_function.py
apps/web/: AI_SDK_MIGRATION_DEMO.md  ARCHITECTURE_COMPARISON.md  RAG_INTEGRATION_GUIDE.md  SST_LAMBDA_MIGRATION_GUIDE.md  architecture.md  db.md  drizzle.config.ts  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(auth)/: layout.tsx  protected.tsx
apps/web/app/(main)/: layout.tsx
apps/web/app/components/: app-sidebar-inset.tsx  app-sidebar.tsx  app-siderbar-provider.tsx  sidebar-bolt.tsx  (+1 more)
apps/web/db/: db.ts  drizzle.ts
apps/web/rag/: .gitignore  README.md  config.py  food.py  food_advisor.py  food_image_analyzer.py  main.py  requirements.txt  start_server.py  test_integration.py
apps/web/stores/: order-store.ts  profile-store.ts
(+61 files in other folders)
